package com.japhy.design.chain.demo2;

/**
 * @author Japhy
 * @since 2021/1/26 10:45
 */
public enum RequestType {
    SOLIDER,
    OFFICER;

}
